# mcrs

./: Cargo.toml  LICENSE  index.html  mcrs.d.ts  mcrs.js  mcrs_bg.wasm.d.ts  wasm.md
.github/actions/: rust.yml
.github/workflows/: rust.yml
assets/shaders/: array_texture.wgsl
src/: lib.rs  main.rs  voxel.rs
